Fixed cropped product in Firefox

--- a/assets/collection-page.css
+++ b/assets/collection-page.css
@@ -84,7 +84,6 @@
 
   .collection-page__grid .collection-page__products {
     grid-area: grid;
-    grid-auto-rows: fit-content(100%);
   }
 
   .collection-page__grid .collection-page__pagination {
